# VendotekLite_emulator

./: CMakeLists.txt  README.md
input/: config.json  input.json  input_change_baudrate.json  input_get_device_statistic.json  input_get_device_status.json  input_get_echo_without_pending.json  input_make_sound.json
input/reference_dumps/: dump 1 - mfr_ul_auth_clear_password.json  dump 1 - mfr_ul_auth_clear_password.txt
input/test_contact/: input_many_actions.json  input_power_off.json  input_power_on_transmit_off.json  input_transmit_apdu.json  input_try_transmit_without_power.json
input/test_contactless/: input_emv_removal.json  input_poll_for_token.json  input_poll_for_token_many_cards.json  input_power_off_rf.json  input_rats.json  input_transaction.json  input_tsv_bit_array.json
input/test_mifare/: input_test_card_parcing.json  input_test_card_parsing.json
input/test_mifare/classic/: input_auth.json  input_auth_on_clear_key.json  input_bulk_operation.json  input_commit_counter.json  input_copy_counter.json  input_get_counter.json  input_modify_counter.json  input_read_blocks.json  input_set_counter.json  input_test_card_parcing.json  input_write_blocks.json
input/test_mifare/ultralight/: input_auth_clear_password.json  input_auth_on_clear_key.json  input_auth_on_clear_password.json  input_auth_on_sam_key.json  input_auth_sam_password.json  input_bulk_operation_C.json  input_bulk_operation_ev1.json  input_get_counter_C.json  input_get_counter_ev1.json  input_get_version_ev1.json  input_increment_counter_ev1.json  input_read_pages_C.json  input_read_pages_ev1.json  input_write_blocks.json  input_write_pages_C.json  input_write_pages_ev1.json
input/test_misc/: input_change_baudrate.json  input_change_lan_settings_dhcp.json  input_change_lan_settings_manual.json  input_get_device_statistic.json  input_get_device_status.json  input_get_echo_with_pending.json  input_get_echo_without_pending.json  input_make_sound.json  input_read_device_info.json  input_reboot_device.json  input_set_leds_state.json  input_set_leds_state_corrupted.json
proto_src/common/: failure.pb.cc  failure.pb.h  notification.pb.cc  notification.pb.h
proto_src/intellireader/: commands.pb.cc  commands.pb.h  commands2.pb.cc  commands2.pb.h  commands3.pb.cc  commands3.pb.h  commands4.pb.cc  commands4.pb.h  commands7.pb.cc  commands7.pb.h
proto_src/intellireader/cipurse/: append_record.pb.cc  append_record.pb.h  auth.pb.cc  auth.pb.h  authorize_sam.pb.cc  authorize_sam.pb.h  modify_value.pb.cc  modify_value.pb.h  select.pb.cc  (+13 more)
src/: App.cpp  App.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h  SmartCard.cpp  SmartCard.h  actionClass.cpp  actionClass.h  base64.h  byteConvertion.h  cards.cpp  cards.h  checksum.cpp  checksum.h  deviceClass.cpp  deviceClass.h  main.cpp  messageClass.cpp  messageClass.h  msg.cpp  msg.h  myExceptions.h  payload.cpp  payload.h  report.cpp  report.h  scriptClass.cpp  scriptClass.h
(+222 files in other folders)
